<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="@dimen/padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/big_size"
            android:textStyle="bold"
            android:textColor="@color/base_text"
            android:hint="@string/acc_balance_hint"/>

        <TextView
            android:id="@+id/currency"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:layout_marginLeft="@dimen/padding"
            android:layout_marginStart="@dimen/padding"
            android:textSize="@dimen/normal_size"
            android:textStyle="bold"
            android:textColor="@color/base_text"
            android:hint="@string/acc_currency_hint"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sender"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/padding"
            android:layout_marginEnd="@dimen/padding"
            android:textSize="@dimen/normal_size"
            android:textColor="@color/light_text"
            android:hint="@string/acc_sender_hint"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/normal_size"
            android:textColor="@color/light_text"
            android:hint="@string/acc_date_hint"/>
    </LinearLayout>

</LinearLayout>